--- a/src/assets/styles/miscs.scss
+++ b/src/assets/styles/miscs.scss
@@ -116,3 +116,30 @@
   overflow-y: scroll;
   overflow-x: hidden;
 }
+
+.scroll-callScriptRes {
+  margin-right: unset;
+  height: 480px;
+
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.scroll-leads {
+  margin-right: unset;
+  height: 550px;
+
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+.scroll-lead {
+  margin-right: unset;
+  height: 260px;
+
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.curs_pointer {
+  cursor: pointer;
+}
