--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -97,16 +97,11 @@ textarea {
 }
 select {
   font-size: 14px;
-  padding: 14px;
+  //padding: 14px;
   border-color: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
   background-color: #e8edff;
   color: $huntease-main;
   border-radius: $border-radius-inputs;
-  border: 0;
-  outline: 0;
 }
 ::placeholder {
   color: #8ba3ff;
@@ -1077,6 +1072,7 @@ body {
     margin: 31px 0 0 60px;
     padding: 21px;
     position: relative;
+
     .withoutGuide {
       & h3 {
         color: $huntease-main;
@@ -1125,6 +1121,26 @@ body {
         background-color: #f6f9ff;
         border: none;
       }
+      & .guideResTitle {
+        padding: 0 0 10px 10px;
+        color: $huntease-main;
+      }
+      .GuideResponse {
+        width: 640px;
+        height: 342px;
+        padding: 20px 15px 20px 15px;
+        border-radius: 10px;
+        border: 2px solid #e1eaff;
+        & h5 {
+          font-weight: $bold;
+          color: $huntease-main;
+        }
+        & h4 {
+          font-weight: $regular;
+          color: $huntease-titles;
+          padding: 10px 0 30px 0;
+        }
+      }
       & img {
         margin: 0 4px 0 4px;
       }
@@ -1150,10 +1166,36 @@ body {
       & .notesArea {
         height: 406px;
       }
+      & .guideResArea {
+        height: 342px;
+        width: 100%;
+      }
       & h5 {
         color: $huntease-main;
       }
+      .DidyouBook {
+        width: 100%;
+        height: 125px;
+        border-radius: $border-radius-button;
+        background-color: #f6f9ff;
+        margin: 5px 0 0 0;
+        & h3 {
+          font-weight: $light;
+          color: $huntease-main;
+          padding: 10px 0 10px 0;
+        }
+        & .Change-profile-btn {
+          color: $huntease-green;
+          width: 68px;
+          height: 35px;
+          margin: 0 5px 0 5px;
+        }
+        & .decline {
+          color: #d85050;
+        }
+      }
     }
+
     .Bottom-bloc {
       position: absolute;
       bottom: 15px;
@@ -1161,7 +1203,98 @@ body {
       left: 0;
       background-color: white;
       padding: 10px 0 10px 0;
+      &.Schedules {
+        bottom: 80px;
+        width: 349px;
+        height: 326px;
+        right: 0;
+        left: 0;
+        margin: auto;
+        border-radius: $border-radius-button;
+        background-color: white;
+        box-shadow: $box-shadow;
+        padding: 25px;
+        .inner {
+          width: 100%;
+          .emptySchedules {
+            & h5 {
+              color: $huntease-medium;
+              font-weight: $bold;
+              padding: 25px 0 25px 0;
+            }
+            & .integrate-button {
+              background-color: #e0e5f7;
+              color: $huntease-main;
+              font-size: 14px;
+              font-weight: $regular;
+              border: none;
+              & img {
+                margin: 0 5px 0 5px;
+              }
+            }
+          }
+          .SchedulesList {
+            width: 100%;
+            .blocList {
+              width: 100%;
 
+              & h4 {
+                font-weight: $bold;
+                color: $huntease-titles;
+                margin: 0;
+                //padding: 0 10px 0 10px;
+                width: 90%;
+              }
+              & img {
+                //  margin: 0;
+              }
+            }
+            .blocListSchedule {
+              width: 305px;
+              height: 50px;
+              background-color: $huntease-light;
+              margin: 5px 0 5px 0;
+              padding: 0 5px 0 5px;
+              a {
+                color: $huntease-main;
+                font-weight: $bold;
+                font-size: 14px;
+                text-decoration: none;
+                text-align: left;
+                padding: 5px 0 5px 0;
+              }
+            }
+          }
+          .AddSchedule {
+            & h4 {
+              font-weight: $bold;
+              color: $huntease-titles;
+              margin: 0;
+              padding: 0 10px 0 10px;
+            }
+            & h5 {
+              color: $huntease-medium;
+              font-weight: $regular;
+            }
+            & input {
+              width: 300px;
+              margin: 0px 0 20px 0;
+            }
+            & .integrate-button {
+              background-color: $huntease-main;
+              color: white;
+              font-size: 12px;
+              font-weight: $regular;
+              border: none;
+              width: 148px;
+              height: 36px;
+              & img {
+                margin: 0 5px 0 5px;
+              }
+            }
+          }
+        }
+      }
       & .integrate-button {
         width: unset;
         height: 37px;
@@ -1188,6 +1321,329 @@ body {
       }
     }
   }
+
+  .CallLead {
+    width: 28.75em;
+    height: 39.375em;
+    border-radius: $border-radius-button;
+    box-shadow: $box-shadow;
+    background-color: white;
+    margin: 31px 0 0 30px;
+    //  padding: 21px;
+    position: relative;
+    .leadDisplay {
+      .topBloc {
+        & .inCallTopBloc {
+          height: 270px;
+        }
+        width: 100%;
+        padding: 20px 25px 20px 25px;
+        height: 202px;
+        box-shadow: $box-shadow;
+        border-radius: 0 0 30px 30px;
+        & h5 {
+          color: $huntease-medium;
+          font-weight: $regular;
+          margin: 0;
+        }
+
+        .cancelInfos {
+          width: 100%;
+          & h4 {
+            font-weight: $bold;
+            color: $huntease-medium;
+            width: 93%;
+            margin: 0;
+          }
+        }
+        .toggleWindow {
+          & h5 {
+            padding: 0 40px 0 40px;
+          }
+        }
+        .leadDetailTop {
+          padding: 20px 0 25px 0;
+          width: 100%;
+          & img {
+            width: 80px;
+            height: 80px;
+            border-radius: 30px;
+            margin: 0 10px 0 0;
+          }
+          .middleTop {
+            width: 63%;
+            & h2 {
+              font-size: 20px;
+              color: $huntease-main;
+              font-weight: $bold;
+              margin: 0;
+              padding: 0 0 8px 0;
+              line-height: normal;
+            }
+          }
+
+          & .directCall {
+            width: 60px;
+            height: 60px;
+            background-color: #26ec82;
+            border-radius: 20px;
+          }
+        }
+      }
+      .callSection {
+        position: absolute;
+        bottom: 15px;
+        .callBloc {
+          margin: 0 10px 0 10px;
+          & p {
+            color: $huntease-medium;
+            font-weight: $regular;
+          }
+          .callIcon {
+            width: 50px;
+            height: 50px;
+            border-radius: 20px;
+            background-color: #f3f6ff;
+            margin: 0 0 8px 0;
+          }
+          & .callIconEnd {
+            background-color: #ff5773;
+          }
+        }
+      }
+      .inCallTopBloc {
+        width: 100%;
+        padding: 20px 25px 20px 25px;
+        height: 270px;
+        box-shadow: $box-shadow;
+        border-radius: 0 0 30px 30px;
+        position: relative;
+
+        .emptyAudio {
+          position: absolute;
+          top: 70px;
+          z-index: 100;
+        }
+        .audioShow {
+          position: absolute;
+          top: 50px;
+          z-index: 100;
+        }
+        & h5 {
+          color: $huntease-medium;
+          font-weight: $regular;
+          margin: 0;
+          padding: 0px 0 15px 0;
+        }
+        & p {
+          color: #26ec82;
+          margin: 0;
+          font-weight: $bold;
+        }
+        & img {
+          width: 80px;
+          height: 80px;
+          border-radius: 30px;
+          margin: 15px 0px 10px 0px;
+          z-index: 1000;
+        }
+        & h2 {
+          font-size: 18px;
+          color: $huntease-main;
+          font-weight: $bold;
+          margin: 0;
+          padding: 0px 0 5px 0;
+          line-height: normal;
+        }
+        & h3 {
+          font-size: 22px;
+          color: $huntease-medium;
+          font-weight: $light;
+          margin: 0;
+          padding: 0px 0 15px 0;
+          line-height: normal;
+        }
+        .toggleWindow {
+          & h5 {
+            padding: 0 40px 0 40px;
+          }
+        }
+        .leadDetailTop {
+          padding: 20px 0 25px 0;
+          width: 100%;
+
+          .middleTop {
+            width: 63%;
+          }
+
+          & .directCall {
+            width: 60px;
+            height: 60px;
+            background-color: #26ec82;
+            border-radius: 20px;
+          }
+        }
+      }
+      .social {
+        margin: 24px 0 34px 0;
+        & h5 {
+          color: $huntease-main;
+          font-weight: $bold;
+          margin: 0 60px 0 5px;
+        }
+        & .Save-changes-btn {
+          width: 115px;
+          height: 34px;
+          border-radius: $border-radius-inputs;
+          color: #f7894d;
+          background-color: #fee7db;
+          font-size: 12px;
+          font-weight: $bold;
+        }
+      }
+
+      .full-input {
+        width: 410px;
+        height: 45px;
+        margin: 0;
+        //margin: auto;
+        background-color: #eef3ff;
+        border-radius: $border-radius-inputs;
+        margin: 0px 0px 20px 0px;
+      }
+      & select {
+        height: 40.5px;
+        width: 340px;
+        outline: none;
+        border: none;
+        margin: 0 5px 0 10px;
+        padding: 0;
+        background-color: #eef3ff;
+        color: $huntease-main;
+        font-weight: $bold;
+      }
+      .leadStatus {
+        width: 100%;
+        padding: 0 0 15px 30px;
+        & h4 {
+          color: $huntease-medium;
+          font-weight: bold;
+        }
+      }
+      .Status {
+        flex-wrap: wrap;
+        width: 100%;
+        padding: 0 0 15px 20px;
+
+        .StatusOne {
+          height: 36px;
+          background-color: #f6f9ff;
+          color: $huntease-medium;
+          font-weight: $regular;
+          font-size: 12px;
+          font-family: $font;
+          margin: 5px 8px 5px 8px;
+          padding: 0 12px 0 12px;
+          border-radius: $border-radius-inputs;
+          cursor: pointer;
+        }
+        & .activeStatus {
+          color: #f7894d;
+          background-color: #fee7db;
+        }
+      }
+    }
+    .LeadListing {
+      & h3 {
+        font-size: 18px;
+        font-weight: $bold;
+        color: $huntease-titles;
+        width: 80%;
+        padding-left: 5px;
+        padding: 21px;
+      }
+      .edit {
+        width: 37px;
+        height: 37px;
+        background-color: #e8edff;
+        border-radius: 10px;
+      }
+      .LeadList:hover {
+        background-color: #eaedf6;
+      }
+      .LeadList {
+        width: 460px;
+        height: 60px;
+        margin: 0px 0 0 0;
+        // background-color: #eaedf6;
+        padding: 21px;
+        cursor: pointer;
+
+        & img {
+          width: 40px;
+          height: 40px;
+          border-radius: $border-radius-button;
+        }
+        .SubInfos {
+          width: 70%;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          white-space: nowrap;
+          padding: 0 0 0 15px;
+
+          & h5 {
+            color: $huntease-medium;
+            font-weight: $regular;
+            margin: 0;
+            padding: 0 0 0px 0;
+          }
+          & h4 {
+            color: $huntease-main;
+            font-weight: $regular;
+            margin: 0;
+            padding-right: 15px;
+          }
+        }
+        .directCall {
+          width: 40px;
+          height: 40px;
+          background-color: $huntease-green;
+          border-radius: 15px;
+        }
+      }
+    }
+    .noLeads {
+      & h3 {
+        font-size: 18px;
+        font-weight: $bold;
+        color: $huntease-titles;
+      }
+      & h2 {
+        color: $huntease-medium;
+        font-weight: $regular;
+      }
+      & img {
+        margin: 100px 0 40px 0;
+      }
+      .importLeads {
+        position: absolute;
+        bottom: 40px;
+        right: 0;
+        left: 0;
+        .Save-changes-btn {
+          width: 309px;
+          height: 50px;
+          border-radius: $border-radius-button;
+          background-color: #ff7a59;
+          font-size: 16px;
+          font-weight: $regular;
+          & img {
+            margin: 0 5px 0 5px;
+          }
+        }
+      }
+    }
+  }
 }
 .popup-container {
   background-repeat: no-repeat;
@@ -1201,6 +1657,32 @@ body {
   top: 0;
   bottom: 0;
   opacity: 1;
+}
+.popup_inner-change-password {
+  padding: 30px;
+  width: 23.4375rem;
+  height: 26rem;
+  display: inline-block;
+  background-color: white;
+  box-shadow: $box-shadow;
+  border-radius: 15px 15px 0 0;
+  & h3 {
+    font-weight: $bold;
+    color: $huntease-titles;
+  }
+  & h5 {
+    color: $huntease-medium;
+    font-weight: $regular;
+  }
+  & input {
+    margin: 5px 0 15px 0;
+  }
+  & .Change-profile-btn {
+    width: 146px;
+    height: 39px;
+    color: white;
+    background-color: $huntease-main;
+  }
 }
 .chooseGuidePopup {
   padding: 30px;
