--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -251,6 +251,9 @@ html,
 body {
   background-color: #f3f7fc;
   font-size: 16px;
+  @include desktop-xl {
+    font-size: 19px;
+  }
 }
 .auth-bloc {
   background-image: url("../img/authback_test.svg");
@@ -370,13 +373,14 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   width: 100vw;
+  height: 100vh;
   margin: 0;
   padding: 0;
-  position: fixed;
+  // position: fixed;
   left: 0;
   right: 0;
   //
-  overflow-y: hidden;
+  //  overflow-y: hidden;
   .main-contour {
     width: 100%;
     height: 100%;
