--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -458,7 +458,7 @@ body {
     background-color: white;
     border-radius: 15px;
     box-shadow: $box-shadow;
-    margin: 31px 25px 25px 60px;
+    margin: 31px 30px 25px 60px;
     padding: 25px;
     ::-webkit-scrollbar {
       background: $huntease-light;
@@ -517,7 +517,7 @@ body {
     background-color: white;
     border-radius: 15px;
     box-shadow: $box-shadow;
-    margin: 0 25px 0 60px;
+    margin: 0 30px 0 60px;
     padding: 25px;
     & h5 {
       color: $huntease-medium;
@@ -566,7 +566,7 @@ body {
 }
 
 .Settings {
-  margin: 31px 0 0 60px;
+  margin: 31px 30px 0 60px;
   .Settings-container {
     height: 36.625em;
     width: 71.4375em;
