--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -389,7 +389,7 @@ body {
 
 .topnav-main {
   height: var(--navbar-main-height);
-  width: 84.3rem;
+  width: 86.4rem;
   //position: fixed;
   padding-top: 25px;
   // padding: 40px 0 0 60px;
@@ -2049,6 +2049,15 @@ body {
 
     .inputsPay {
       width: 100%;
+      .paymentDetails {
+        // margin: 5px 0 15px 0;
+        & h4 {
+          width: 95%;
+        }
+        & img {
+          margin: 0;
+        }
+      }
     }
     .full-input {
       display: inline-block;
@@ -2154,8 +2163,15 @@ body {
       }
     }
 
-    .inputsPay {
-      width: 100%;
+    .paymentDetails {
+      margin: 5px 0 15px 0;
+      & h4 {
+        width: 95%;
+        margin: 0;
+      }
+      & img {
+        margin: 0;
+      }
     }
     .full-input {
       display: inline-block;
