--- a/src/assets/styles/miscs.scss
+++ b/src/assets/styles/miscs.scss
@@ -204,3 +204,14 @@
   position: fixed;
   z-index: 1;
 }
+@keyframes spin {
+  to {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes spin {
+  to {
+    -webkit-transform: rotate(360deg);
+  }
+}
