--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -376,9 +376,12 @@ body {
   height: 100vh;
   margin: 0;
   padding: 0;
+  z-index: 0;
   // position: fixed;
   left: 0;
   right: 0;
+  // filter: blur(0);
+  position: relative;
   //
   //  overflow-y: hidden;
   .main-contour {
@@ -1693,10 +1696,9 @@ body {
 }
 .popup-container {
   background-repeat: no-repeat;
-
   width: 100%;
   height: 100%;
-  z-index: 1000;
+  z-index: 100000;
   position: fixed;
   left: 0;
   right: 0;
@@ -1765,6 +1767,8 @@ body {
   & h3 {
     font-weight: $bold;
     color: $huntease-titles;
+    margin: 0;
+    width: 90%;
   }
   & h5 {
     color: $huntease-medium;
@@ -2257,6 +2261,8 @@ body {
   border-radius: 15px;
   position: relative;
   padding: 30px;
+  z-index: 100;
+
   & h4 {
     color: $huntease-titles;
     font-weight: $bold;
