--- a/src/assets/styles/miscs.scss
+++ b/src/assets/styles/miscs.scss
@@ -76,7 +76,11 @@
 }
 
 .blured {
-  filter: blur(4px);
+  -webkit-filter: blur(3px);
+  -moz-filter: blur(3px);
+  -o-filter: blur(3px);
+  -ms-filter: blur(3px);
+  filter: blur(3px);
 }
 
 .floatLeft {
