--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -405,14 +405,27 @@ body {
     ::-webkit-scrollbar-button {
       display: none;
     }
-    .Title {
-      font-size: 1.3125em;
+    & .Change-profile-btn {
+      width: 6.25rem;
+      height: 2.3125rem;
+      background-color: white;
       color: $huntease-medium;
-      opacity: 0.5;
-      font-weight: $light;
-      font-family: $font;
-      outline: 0;
+      border: 1px solid $huntease-medium;
     }
+    .guideTitle {
+      margin: 0 0 30px 0;
+      .Title {
+        font-size: 1.3125em;
+        color: $huntease-medium;
+        opacity: 0.5;
+        font-weight: $light;
+        font-family: $font;
+        outline: 0;
+        margin: 0;
+        width: 87%;
+      }
+    }
+
     .prompt-field {
       padding: 0 0 20px 0;
       .add-prompt {
@@ -431,6 +444,9 @@ body {
         margin: 0;
         width: 90%;
         outline: 0;
+      }
+      .option {
+        margin: 0 0 0 10px;
       }
     }
   }
