--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -503,7 +503,23 @@ body {
     }
   }
 }
-
+.Dashboard {
+  margin: 31px 0 0 60px;
+  .Dashboard-container {
+    height: 38.9375em;
+    width: 71.4375em;
+    background-color: white;
+    border-radius: $border-radius-button;
+    box-shadow: $box-shadow;
+    position: relative;
+    & h2 {
+      font-weight: $bold;
+      color: $huntease-main;
+      font-size: 50px;
+      line-height: normal;
+    }
+  }
+}
 .Settings {
   margin: 31px 30px 0 60px;
   .Settings-container {
@@ -521,7 +537,8 @@ body {
     }
     .MyProfile {
       padding: 30px;
-
+      width: 100%;
+      position: relative;
       & h5 {
         font-weight: $regular;
         color: $huntease-medium;
@@ -553,98 +570,101 @@ body {
           width: 74.7%;
         }
       }
-      .Add-number {
-        margin-left: 21.3%;
-        width: 18.75rem;
-        height: 2.6875rem;
-        background-color: #e8edff;
-        border-radius: $border-radius-inputs;
-        padding: 0 0 0 15px;
-        & h5 {
-          margin: 0;
-          width: 74.7%;
-        }
-        & h4 {
-          color: $huntease-main;
-          font-weight: $regular;
-          margin: 0;
-          padding-left: 10px;
-          width: 64.7%;
-        }
-        & img {
-          width: 27px;
-          border-radius: 2px;
-        }
-      }
 
-      .Add-number-bloc {
-        margin-left: 21.3%;
-        width: 18.75rem;
-        height: 9.625rem;
-        background-color: white;
-        border-radius: $border-radius-inputs;
-        box-shadow: $box-shadow;
-        padding: 10px 20px 10px 20px;
-        .full-input {
-          width: 16.125rem;
-          height: 2.5625rem;
-          margin: 0;
-          //margin: auto;
-          background-color: #ebefff;
+      .rightBloc {
+        top: 1.875rem;
+        right: 2.1875rem;
+        position: absolute;
+        .Add-number {
+          margin-left: 21.3%;
+          width: 18.75rem;
+          height: 2.6875rem;
+          background-color: #e8edff;
           border-radius: $border-radius-inputs;
-          // margin: 0px 0px 20px 0px;
-        }
-        & p {
-          margin: 0;
-          padding: 8px 0 8px 0;
-          font-weight: $regular;
-          color: $huntease-medium;
-        }
-        & h4 {
-          color: $huntease-main;
-          font-weight: $bold;
-          margin: 0;
-        }
-        & img {
-          margin: 0 5px 0 0px;
-        }
-        & input {
-          width: 258px;
-        }
-      }
-      .Profil-right {
-        margin: 0 0 0 21.3%;
-        width: 18.75rem;
-        height: 15.6875rem;
-        background-color: white;
-        box-shadow: $box-shadow;
-        border-radius: $border-radius-button;
-        .pictureUpload {
-          position: relative;
-          z-index: 10000;
-          & .profile-img {
-            z-index: 100;
+          padding: 0 0 0 15px;
+          & h5 {
+            margin: 0;
+            width: 74.7%;
           }
-          .upload {
-            position: absolute;
-            bottom: 5px;
-            right: 40px;
-            z-index: 1000;
-            width: 14px;
-            border-radius: 0px;
-            background-color: none;
-            cursor: pointer;
+          & h4 {
+            color: $huntease-main;
+            font-weight: $regular;
+            margin: 0;
+            padding-left: 10px;
+            width: 64.7%;
+          }
+          & img {
+            width: 27px;
+            border-radius: 2px;
           }
         }
-        & h3 {
-          color: $huntease-main;
-          font-weight: bold;
-          line-height: 2.3;
-          margin: 0;
+        .Add-number-bloc {
+          width: 18.75rem;
+          height: 9.625rem;
+          background-color: white;
+          border-radius: $border-radius-inputs;
+          box-shadow: $box-shadow;
+          padding: 10px 20px 10px 20px;
+          .full-input {
+            width: 16.125rem;
+            height: 2.5625rem;
+            margin: 0;
+            //margin: auto;
+            background-color: #ebefff;
+            border-radius: $border-radius-inputs;
+            // margin: 0px 0px 20px 0px;
+          }
+          & p {
+            margin: 0;
+            padding: 8px 0 8px 0;
+            font-weight: $regular;
+            color: $huntease-medium;
+          }
+          & h4 {
+            color: $huntease-main;
+            font-weight: $bold;
+            margin: 0;
+          }
+          & img {
+            margin: 0 5px 0 0px;
+          }
+          & input {
+            width: 258px;
+          }
         }
-        & img {
-          width: 100px;
-          border-radius: 20px;
+        .Profil-right {
+          width: 18.75rem;
+          height: 15.6875rem;
+          background-color: white;
+          box-shadow: $box-shadow;
+          border-radius: $border-radius-button;
+          .pictureUpload {
+            position: relative;
+            z-index: 10000;
+            & .profile-img {
+              z-index: 100;
+            }
+            .upload {
+              position: absolute;
+              bottom: 5px;
+              right: 40px;
+              z-index: 1000;
+              width: 14px;
+              border-radius: 0px;
+              background-color: none;
+              cursor: pointer;
+            }
+          }
+          & h3 {
+            color: $huntease-main;
+            font-weight: bold;
+            line-height: 2.3;
+            margin: 0;
+          }
+          & img {
+            width: 100px;
+            border-radius: 20px;
+          }
         }
       }
     }
@@ -1631,6 +1651,7 @@ body {
       }
     }
     .noLeads {
+      padding: 25px;
       & h3 {
         font-size: 18px;
         font-weight: $bold;
