--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -532,7 +532,7 @@ body {
 
     & .Save-changes-btn {
       position: absolute;
-      bottom: 25px;
+      bottom: -30px;
       right: 25px;
     }
     .MyProfile {
@@ -1138,7 +1138,7 @@ body {
         & h4 {
           font-weight: $regular;
           color: $huntease-titles;
-          padding: 10px 0 30px 0;
+          padding: 15px 0 30px 0;
         }
       }
       & img {
@@ -1159,7 +1159,7 @@ body {
       & textarea {
         width: 40rem;
         height: 60px;
-        margin: 10px 0 0 0;
+        margin: 10px 0 15px 0;
         border-radius: 0 15px 15px 15px;
       }
 
@@ -1172,6 +1172,7 @@ body {
       }
       & h5 {
         color: $huntease-main;
+        margin: 0;
       }
       .DidyouBook {
         width: 100%;
@@ -1236,7 +1237,7 @@ body {
           .SchedulesList {
             width: 100%;
             .blocList {
-              width: 100%;
+              width: 21.8125rem;
               padding: 0px 24px 0 24px;
               & h4 {
                 font-weight: $bold;
@@ -1250,7 +1251,7 @@ body {
               }
             }
             .blocListSchedule {
-              width: 100%;
+              width: 21.5rem;
               height: 50px;
               background-color: $huntease-light;
               border-radius: $border-radius-inputs;
