--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -382,13 +382,12 @@ body {
     border-radius: 15px;
     box-shadow: $box-shadow;
     margin: 31px 30px 25px 60px;
-    padding: 25px;
+    padding: 25px 20px 25px 25px;
     ::-webkit-scrollbar {
       background: $huntease-light;
       border-radius: 2px;
       height: 8px;
       width: 7px;
-      display: none;
     }
 
     ::-webkit-scrollbar-thumb {
@@ -396,15 +395,14 @@ body {
       border-radius: 2px;
       background-clip: content-box;
       border: 5px solid transparent;
-      display: none;
     }
     ::-webkit-scrollbar-thumb:hover {
       background: $huntease-medium;
-      display: none;
     }
     ::-webkit-scrollbar-button {
       display: none;
     }
+
     & .Change-profile-btn {
       width: 6.25rem;
       height: 2.3125rem;
@@ -428,6 +426,7 @@ body {
 
     .prompt-field {
       padding: 0 0 20px 0;
+
       .add-prompt {
         width: 40px;
         height: 40px;
@@ -445,8 +444,11 @@ body {
         width: 90%;
         outline: 0;
       }
+      .optionDrag {
+        margin: 0 0px 0 0px;
+      }
       .option {
-        margin: 0 0 0 10px;
+        margin: 0 15px 0 10px;
       }
     }
   }
