--- a/src/assets/styles/miscs.scss
+++ b/src/assets/styles/miscs.scss
@@ -130,6 +130,9 @@ $height-auth-inputs: 43px;
 .Corange {
   color: #ff8565;
 }
+.Bold {
+  font-weight: $bold;
+}
 
 .scroll-team {
   margin-right: unset;
