--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -443,6 +443,9 @@ body {
         margin: 0;
         width: 90%;
         outline: 0;
+        height: 2.5em;
+        padding: 5px 0 0 0;
+        overflow-y: hidden;
       }
       .optionDrag {
         margin: 0 0px 0 0px;
