--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -1630,6 +1630,28 @@ body {
       }
     }
     .LeadListing {
+      .topLeft {
+        width: 100%;
+        & h3 {
+          font-size: 18px;
+          font-weight: $bold;
+          color: $huntease-titles;
+          width: 90%;
+          padding-left: 5px;
+          padding: 21px;
+        }
+        .edit {
+          width: 37px;
+          height: 37px;
+          background-color: #e8edff;
+          border-radius: 10px;
+        }
+      }
+      & input {
+        margin: 15px 5px 14px 15px;
+        width: 400px;
+        height: 37px;
+      }
       & h3 {
         font-size: 18px;
         font-weight: $bold;
