--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -347,15 +347,15 @@ body {
 }
 
 .sidenav {
-  margin: 46px 0 0 0;
+  margin: 2.875rem 0 0 0;
   ul {
     margin: 0;
     padding: 0;
   }
   ul li {
     background-color: white;
-    width: 80px;
-    height: 80px;
+    width: 5rem;
+    height: 5rem;
     transform: translateZ(0);
     transition: transform 0.25s ease-out;
     list-style-type: none;
