--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -1202,7 +1202,7 @@ body {
         padding: 5px 0 5px 0;
       }
       & textarea {
-        width: 40rem;
+        width: 39rem;
         height: 60px;
         margin: 10px 0 15px 0;
         border-radius: 0 15px 15px 15px;
@@ -1253,8 +1253,8 @@ body {
       padding: 10px 0 10px 0;
       &.Schedules {
         bottom: 80px;
-        width: 349px;
-        height: 326px;
+        width: 21.8125rem;
+        height: 20.375rem;
         right: 0;
         left: 0;
         margin: auto;
@@ -1298,11 +1298,11 @@ body {
               }
             }
             .blocListSchedule {
-              width: 21.5rem;
+              width: 21.1rem;
               height: 50px;
               background-color: $huntease-light;
               border-radius: $border-radius-inputs;
-              margin: 3px 0 3px 0;
+              margin: 3px 5px 3px 0;
               padding: 0 5px 0 5px;
               a {
                 color: $huntease-main;
@@ -1696,7 +1696,7 @@ body {
           border-radius: $border-radius-button;
         }
         .SubInfos {
-          width: 70%;
+          width: 85%;
           text-overflow: ellipsis;
           overflow: hidden;
           white-space: nowrap;
@@ -1896,7 +1896,7 @@ body {
   //display: inline-block;
   background-color: white;
   box-shadow: $box-shadow;
-  border-radius: 15px 15px 0 0;
+  border-radius: 15px;
   .topBloc {
     width: 100%;
     & h3 {
@@ -1936,7 +1936,7 @@ body {
   display: inline-block;
   background-color: white;
   box-shadow: $box-shadow;
-  border-radius: 15px 15px 0 0;
+  border-radius: 15px;
   & h3 {
     color: $huntease-main;
     font-weight: $bold;
