--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -163,6 +163,7 @@ html,
 body {
   background-color: #f3f7fc;
   font-size: 16px;
+  height: 100vh;
   @include desktop-xl {
     font-size: 19px;
   }
