--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -170,6 +170,10 @@ body {
   @include desktop-sm {
     font-size: 14.5px;
   }
+  @include desktop-md {
+    font-size: 14.5px;
+  }
+
   @include desktop-xs {
     font-size: 11.5px;
   }
