--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -171,7 +171,7 @@ body {
     font-size: 14.5px;
   }
   @include desktop-md {
-    font-size: 14px;
+    font-size: 15.5px;
   }
 
   @include desktop-xs {
@@ -1392,6 +1392,14 @@ body {
     //  padding: 21px;
     position: relative;
     .leadDisplay {
+      .didWell {
+        margin: 1.25rem 0 1.25rem 0;
+        & h3 {
+          color: $huntease-main;
+          font-weight: $light;
+          padding: 5px 0 5px 0;
+        }
+      }
       .emotions {
         width: 100%;
         flex-wrap: wrap;
@@ -1626,7 +1634,7 @@ body {
       .Status {
         flex-wrap: wrap;
         width: 100%;
-        padding: 0 0 15px 20px;
+        padding: 0 0 1rem 1.25rem;
 
         .StatusOne {
           height: 36px;
